# erguvan-content-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  demo.py  erguvan_ai_content_generator_prompt.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py  test_components.py
config/: brand_guide.yaml  models.yaml
prompts/: system_prompts.yaml
src/analyzer/: style_analyzer.py
src/api/: main.py
src/config/: __init__.py
src/evaluator/: quality_evaluator.py
src/generator/: content_generator.py
src/loader/: document_loader.py  markitdown_loader.py
src/prompts/: __init__.py
src/session/: session_manager.py
src/vector_index/: vector_store.py
